RESOLVED FIXED84267
Prevent potential null pointer dereference in CSSStyleSelector::applyProperty().
https://bugs.webkit.org/show_bug.cgi?id=84267
Summary Prevent potential null pointer dereference in CSSStyleSelector::applyProperty().
Luke Macpherson
Reported 2012-04-18 12:54:59 PDT
Prevent potential null pointer dereference in CSSStyleSelector::applyProperty().
Attachments
Patch (1.45 KB, patch)
2012-04-18 12:55 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-04-18 12:55:48 PDT
WebKit Review Bot
Comment 2 2012-04-18 14:52:05 PDT
Comment on attachment 137744 [details] Patch Clearing flags on attachment: 137744 Committed r114566: <http://trac.webkit.org/changeset/114566>
WebKit Review Bot
Comment 3 2012-04-18 14:52:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.