Prevent potential null pointer dereference in CSSStyleSelector::applyProperty(). https://bugs.webkit.org/show_bug.cgi?id=84267

Reviewed by Kentaro Hara.

No new tests / code cleanup found via static analysis.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/101791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114566 268f45cc-cd09-0410-ab3c-d52691b4dbfc